--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -16,6 +16,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.6",
     "com.unity.xr.management": "4.2.1",
+    "com.unity.xr.mock-hmd": "1.3.0-preview.1",
     "com.unity.xr.oculus": "1.11.2",
     "com.unity.xr.openxr": "1.3.1",
     "com.valvesoftware.unity.openvr": "file:../Assets/SteamVR/OpenVRUnityXRPackage/Editor/com.valvesoftware.unity.openvr-1.1.4.tgz",
